--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "jsEngine": "hermes",
     "splash": {
       "image": "./assets/splash.png",
       "backgroundColor": "#1B1B1F"
