--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,9 +8,9 @@ buildscript {
         minSdkVersion = Integer.parseInt(findProperty('android.minSdkVersion') ?: '21')
         compileSdkVersion = Integer.parseInt(findProperty('android.compileSdkVersion') ?: '31')
         targetSdkVersion = Integer.parseInt(findProperty('android.targetSdkVersion') ?: '31')
-        if (findProperty('android.kotlinVersion')) {
-            kotlinVersion = findProperty('android.kotlinVersion')
-        }
+        // if (findProperty('android.kotlinVersion')) {
+        //     kotlinVersion = findProperty('android.kotlinVersion')
+        // }
         frescoVersion = findProperty('expo.frescoVersion') ?: '2.5.0'
 
         if (System.properties['os.arch'] == 'aarch64') {
@@ -20,6 +20,9 @@ buildscript {
             // Otherwise we default to the side-by-side NDK version from AGP.
             ndkVersion = '21.4.7075529'
         }
+
+        kotlin_version = '1.5.20'
+        kotlinVersion = '1.5.20'
     }
     repositories {
         google()
